--- a/DevagramCSharp/Properties/launchSettings.json
+++ b/DevagramCSharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:53672",
       "sslPort": 44380
