--- a/DevagramCSharp/appsettings.json
+++ b/DevagramCSharp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-QCVFE9F\\SQLEXPRESS;Database=DevagramDB;User Id=sa;Password=Devaria-2022;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
